Table alignment error corrected

--- a/project/src/Components/UserApplication/UserApplication.css
+++ b/project/src/Components/UserApplication/UserApplication.css
@@ -190,3 +190,58 @@ textarea:focus {
 .Form_Item Input{
   padding-right: 0px;
 }
+
+/*User Application*/
+
+.UserApplicationForm {
+  max-width: 800px;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.ant-form-item-control {
+    width: calc(100% - 120px); /* Adjust the width as needed */
+}
+
+.ant-form-item-label {
+    width: 120px; /* Adjust the width as needed */
+    margin-left: 100px;
+}
+
+
+.UserApplicationFormHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #022C3B;
+  margin: 0;
+  padding: 10px;
+}
+
+.UserApplicationFormHeader h3 {
+  color: #e0f7ff;
+  margin: 0;
+  flex: 1; /* Take up remaining space, centering the h3 */
+  text-align: center;
+}
+
+.UserApplicationFormApplication {
+  max-height: 500px; 
+  overflow-y: auto; 
+  border: 1px solid #e0f7ff;
+  border-radius: 4px;
+  background-color: #D6F5FF;
+  color: #022C3B;
+  font-weight: 500;
+}
+
+/* Style for Submit button */
+
+.UserApplicationCloseBtn {
+position : relative;
+  font-size: 22px;
+  color: #e0f7ff;
+  cursor: pointer;
+}
